--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,6 +59,10 @@
     /* container-type: size;
     font-size:4cqh; */
 }
+.volume:hover {
+   background-color: #dadbfb;
+  }
+
 /* .horizontalWrap{
 
   display: flex;
